--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site-teste</title>
+    <link rel="stylesheet" href="Meus_estilos/style.css">
 </head>
 <body>
     <div>
@@ -12,7 +13,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam ex fugiat ratione eaque tenetur sequi? Molestiae minus iure quisquam alias ab, dignissimos, numquam ullam, dolore deleniti sit adipisci modi voluptatum.</p>
 
 
-    <h2>segundo paragrafo</h2>
+    <h2>Segundo paragrafo</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptate adipisci hic temporibus, ea quia tempore dolores odio libero quam? Quam consequatur iusto temporibus! Laborum enim suscipit in! Consequatur, officia tenetur?</p>
     </div>
 </body>
